# ml2022

./: .gitignore  pyproject.toml
mlzoomcamp_2022/exercises/chapter_01/: homework.ipynb  intro_to_numpy.ipynb  pandas.ipynb
mlzoomcamp_2022/exercises/chapter_02/: exercises.ipynb  homework.ipynb
mlzoomcamp_2022/exercises/chapter_03/: exercises.ipynb  homework.ipynb
tests/: test_mlzoomcamp_2022.py
