[tool.poetry]
name = "mlzoomcamp_2022"
version = "0.1.0"
description = ""
authors = ["shri3k <github@yojan.dev>"]

[tool.poetry.dependencies]
python = ">3.10,<3.11"
jupyter = "^1.0.0"
pandas = "^1.4.4"
httpx = "^0.23.0"
seaborn = "^0.12.0"
matplotlib = "^3.6.0"
numpy = "^1.23.3"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^8.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
